<?xml version="1.0"?>
<package format="2">
  <name>ov2slam</name>
  <version>2.0.0</version>
  <description>The OV2SLAM package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="maxime.ferrera@gmail.com">Maxime Ferrera</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <url type="website">https://github.com/ov2slam/ov2slam</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend> rclcpp </depend>
  <depend> std_msgs </depend>
  <depend> sensor_msgs </depend>
  <depend> visualization_msgs </depend>
  <depend> cv_bridge </depend>
  <depend> image_transport </depend>
  <depend> tf2 </depend>
  <depend> tf2_ros </depend>
  <depend> pcl_conversions </depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
